--- a/index.html
+++ b/index.html
@@ -2,12 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>ColorSpectrum</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+
+<div class="container min-vh-100 d-flex justify-content-center align-items-center flex-column">
+    <div class="row text-center mb-5">
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-3 col-2">12312312</div>
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-8">
+            <img src="img/LogoSvg.svg" class="img-fluid rounded">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-3 col-2">123123123</div>
+        <div class="col-12">
+            <h1>ColorSpectrum</h1>
+        </div>
+    </div>
+
+    <div class="row text-center">
+        <div class="col-12">
+            <h3>Random Color</h3>
+        </div>
+
+        <div class="col-12">
+            <h3>Color Picker</h3>
+        </div>
+
+        <div class="col-12">
+            <h3>Create Gradient</h3>
+        </div>
+    </div>
+</div>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
