--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
     </div>
 
     <div class="row text-center">
-        <div class="col-12">
-            <h3>Random Color</h3>
+        <div class="col-12 mb-3">
+            <button class="btn-main btn-picker">Color Picker</button>
         </div>
 
-        <div class="col-12">
-            <h3>Color Picker</h3>
+        <div class="col-12 mb-3">
+            <button class="btn-main btn-random">Random Color</button>
         </div>
 
-        <div class="col-12">
-            <h3>Create Gradient</h3>
+
+        <div class="col-12 mb-3">
+            <button class="btn-main btn-gradient">Create Gradient</button>
         </div>
     </div>
 </div>
