--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 
 <div class="container min-vh-100 d-flex justify-content-center align-items-center flex-column">
     <div class="row text-center mb-5">
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-3 col-2">12312312</div>
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-3 col-2 hidden">12312312</div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-8">
             <img src="img/LogoSvg.svg" class="img-fluid rounded">
         </div>
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-3 col-2">123123123</div>
-        <div class="col-12">
-            <h1>ColorSpectrum</h1>
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-3 col-2 hidden">123123123</div>
+        <div class="row">
+            <div class="col-xl-4 col-lg-4 col-md-3 col-sm-2 col-1 hidden">123123123</div>
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-8 col-10">
+                <h1 id="title">ColorSpectrum</h1>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-3 col-sm-2 col-1 hidden">123123123</div>
         </div>
     </div>
+
 
     <div class="row text-center">
         <div class="col-12 mb-3">
