--- a/randomColor/randomColor.html
+++ b/randomColor/randomColor.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="/index.css"></link>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/img/favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+
 </head>
 <body>
 
@@ -41,22 +49,22 @@
     <div class="text-center">
         <div class="backgroundColor p-5 m-5">
             <h1 class="hidden">12312312312312312312312312311111111</h1>
-            <h1 class="pb-3">Background Color:</h1>
+            <h1 id="title" class="pb-3">Background Color:</h1>
 
             <h1 class="d-flex justify-content-center flex-row">
-                HEX: <a id="colorHex" class="ps-2"> #FFFFF</a>
+                HEX: <a id="colorHex" class="ps-2 color"> #FFFFF</a>
             </h1>
 
             <h1 class="d-flex justify-content-center flex-row">
-                RGB: <a id="colorRGB" class="ps-2">255, 255, 255</a>
+                RGB: <a id="colorRGB" class="ps-2 color">255, 255, 255</a>
             </h1>
 
             <h1 class="d-flex justify-content-center flex-row">
-                HSV: <a id="colorHSV" class="ps-2"> 0°, 0%, 100%</a>
+                HSV: <a id="colorHSV" class="ps-2 color"> 0°, 0%, 100%</a>
             </h1>
 
             <h1 class="d-flex justify-content-center flex-row">
-                HSL: <a id="colorHSL" class="ps-2">0°, 0%, 100% </a>
+                HSL: <a id="colorHSL" class="ps-2 color">0°, 0%, 100% </a>
             </h1>
         </div>
         <button id="changeBtn" class="btn-main btn-change">Click</button>
