--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <link rel="manifest" href="img/favicon/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <style>
+        a{
+            color: black;
+            text-decoration: none;
+        }
+        a:hover{
+            color: #ffffff;
+        }
+    </style>
 </head>
 <body>
 
@@ -35,16 +44,22 @@
 
     <div class="row text-center">
         <div class="col-12 mb-3">
-            <button class="btn-main btn-picker">Color Picker</button>
+            <button class="btn-main btn-picker">
+                <a href="colorPicker/colorPick.html">Color Picker</a>
+            </button>
         </div>
 
         <div class="col-12 mb-3">
-            <button class="btn-main btn-random">Random Color</button>
+            <button class="btn-main btn-random">
+                <a href="randomColor/randomColor.html">Random Color</a>
+            </button>
         </div>
 
 
         <div class="col-12 mb-3">
-            <button class="btn-main btn-gradient">Create Gradient</button>
+            <button class="btn-main btn-gradient">
+                <a class="" href="generateGradient/genGradient.html">Create Gradient</a>
+            </button>
         </div>
     </div>
 </div>
