--- a/generateGradient/genGradient.html
+++ b/generateGradient/genGradient.html
@@ -22,13 +22,10 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active picker" href="randomColor.html">Color Picker</a>
+                    <a class="nav-link active random" href="../randomColor/randomColor.html">Random Color</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active random" href="#">Random Color</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active gradient" href="#">Create Gradient</a>
+                    <a class="nav-link active gradient" href="genGradient.html">Create Gradient</a>
                 </li>
             </ul>
         </div>
