--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
     <div class="row text-center">
 
         <div class="col-12 mb-3">
+            <button class="btn-main btn-picker">
+                <a href="Contacts/contacts.html">Contacts</a>
+            </button>
+        </div>
+
+        <div class="col-12 mb-3">
             <button class="btn-main btn-random">
                 <a href="randomColor/randomColor.html">Random Color</a>
             </button>
         </div>
-
 
         <div class="col-12 mb-3">
             <button class="btn-main btn-gradient">
