--- a/generateGradient/genGradient.html
+++ b/generateGradient/genGradient.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link active gradient" href="genGradient.html">Create Gradient</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="../Contacts/contacts.html">Contracts</a>
+                </li>
             </ul>
         </div>
     </div>
