--- a/randomColor/randomColor.html
+++ b/randomColor/randomColor.html
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link active gradient" href="../generateGradient/genGradient.html">Create Gradient</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="../Contacts/contacts.html">Contracts</a>
+                </li>
             </ul>
         </div>
     </div>
