--- a/generateGradient/genGradient.html
+++ b/generateGradient/genGradient.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="genGradient.css">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="../index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+<div id="preloader"></div>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">ColorSpectrum</a>
@@ -84,7 +86,6 @@
         <div class="col-1 hidden">123</div>
     </div>
 </div>
-
 
 <script src="genGradient.js"></script>
 </body>
