--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <style>
-        a{
+        a {
             color: black;
             text-decoration: none;
         }
-        a:hover{
+
+        a:hover {
             color: #ffffff;
         }
     </style>
 </head>
 <body>
+<div id="preloader"></div>
 
 <div class="container min-vh-100 d-flex justify-content-center align-items-center flex-column">
     <div class="row text-center mb-5">
@@ -43,29 +45,27 @@
 
 
     <div class="row text-center">
-
-        <div class="col-12 mb-3">
-            <button class="btn-main btn-picker">
-                <a href="Contacts/contacts.html">Contacts</a>
-            </button>
-        </div>
-
         <div class="col-12 mb-3">
             <button class="btn-main btn-random">
-                <a href="randomColor/randomColor.html">Random Color</a>
+                <a id="randColorLink" href="randomColor/randomColor.html">Random Color</a>
             </button>
         </div>
 
         <div class="col-12 mb-3">
             <button class="btn-main btn-gradient">
-                <a class="" href="generateGradient/genGradient.html">Create Gradient</a>
+                <a id="gradLink" class="" href="generateGradient/genGradient.html">Create Gradient</a>
             </button>
         </div>
 
+        <div class="col-12 mb-3">
+            <button class="btn-main btn-picker">
+                <a id="contactsLink" href="Contacts/contacts.html">Contacts</a>
+            </button>
+        </div>
     </div>
 </div>
 
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
