--- a/randomColor/randomColor.html
+++ b/randomColor/randomColor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="randColor.css">
-    <link rel="stylesheet" href="/index.css"></link>
+    <link rel="stylesheet" href="../index.css"></link>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
@@ -17,6 +17,7 @@
 
 </head>
 <body>
+<div id="preloader"></div>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -71,7 +72,6 @@
     </div>
 </div>
 <script src="randColor.js" language="JavaScript"></script>
-
 
 </body>
 </html>
