--- a/index.html
+++ b/index.html
@@ -46,21 +46,23 @@
 
     <div class="row text-center">
         <div class="col-12 mb-3">
-            <button class="btn-main btn-random">
-                <a id="randColorLink" href="randomColor/randomColor.html">Random Color</a>
-            </button>
+            <a id="randColorLink" href="randomColor/randomColor.html">
+                <button class="btn-main btn-random">Random Color</button>
+            </a>
         </div>
 
         <div class="col-12 mb-3">
-            <button class="btn-main btn-gradient">
-                <a id="gradLink" class="" href="generateGradient/genGradient.html">Create Gradient</a>
-            </button>
+            <a id="gradLink" class="" href="generateGradient/genGradient.html">
+                <button class="btn-main btn-gradient">Create Gradient</button>
+            </a>
         </div>
 
         <div class="col-12 mb-3">
-            <button class="btn-main btn-picker">
-                <a id="contactsLink" href="Contacts/contacts.html">Contacts</a>
-            </button>
+            <a id="contactsLink" href="Contacts/contacts.html">
+                <button class="btn-main btn-picker">
+                    Contacts
+                </button>
+            </a>
         </div>
     </div>
 </div>
