--- a/Contacts/contacts.html
+++ b/Contacts/contacts.html
@@ -45,17 +45,17 @@
     <div class="row w-100">
         <div class="col-5 text-center">
             <h3 class="h3Custom">Send to Us Message</h3>
-            <div class="col-12 p-5 text-center" style="font-family: var(--p-font);">
+            <form class="col-12 p-5 text-center" style="font-family: var(--p-font);">
                 <div class="input-group mb-3">
                     <span class="input-group-text" style="font-size: 1.2rem;" id="basic-addon1">@</span>
-                    <input type="text" class="form-control" style="font-size: 1.2rem;" placeholder="Username"
+                    <input type="text" class="form-control" required style="font-size: 1.2rem;" placeholder="Username"
                            aria-label="Username"
                            aria-describedby="basic-addon1">
                 </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text" style="font-size: 1.2rem;" id="basic-addon2">@example.com</span>
-                    <input type="text" class="form-control" style="font-size: 1.2rem;"
+                    <input type="text" class="form-control" required style="font-size: 1.2rem;"
                            placeholder="Recipient's username"
                            aria-label="Recipient's username"
                            aria-describedby="basic-addon2">
@@ -63,12 +63,13 @@
 
                 <div class="input-group mb-3">
                     <span class="input-group-text" style="font-size: 1.2rem;">Message</span>
-                    <textarea class="form-control" style="font-size: 1.2rem;" aria-label="With textarea"></textarea>
+                    <textarea class="form-control" required style="font-size: 1.2rem;"
+                              aria-label="With textarea"></textarea>
                 </div>
 
-                <button class="btn-main btn-change">Send</button>
+                <button class="btn-main btn-change" type="submit">Send</button>
 
-            </div>
+            </form>
 
         </div>
         <div class="col-2 hidden">123123</div>
@@ -98,13 +99,32 @@
             preloader.style.display = "none";
         }, 1000);
     });
-    $(document).ready(function() {
+    $(document).ready(function () {
         // Обработчик события keypress
-        $(document).keypress(function(event) {
+        $(document).keypress(function (event) {
             console.log("Печатается текст");
         });
     });
 
+    $(document).ready(function () {
+        $('form').submit(function (event) {
+            var isValid = true;
+
+            $(this).find(':input[required]').each(function () {
+                if ($.trim($(this).val()) === '') {
+                    isValid = false;
+                    $(this).addClass('is-invalid');
+                } else {
+                    $(this).removeClass('is-invalid');
+                }
+            });
+
+            if (!isValid) {
+                event.preventDefault();
+                alert('Пожалуйста, заполните все обязательные поля.');
+            }
+        });
+    });
 
 
 </script>
