--- a/Fonts/Josefin.html
+++ b/Fonts/Josefin.html
@@ -4,27 +4,104 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Josefin.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+          integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-	<title>ColorSpectrum</title>
+    <title>ColorSpectrum</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../img/favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+
+    <link rel="stylesheet" href="../index.css">
 </head>
 <body>
-    <div class="container"> 
-        <section id="Josefin">
-            <h1>Josefin</h1>
-        </section>
-        <section id="fonts">
-            <ul class="list-group">
-                <li class="list-group-item"> <p class="first">Fonts from Friendly Fire Division  <a href="fonts/Josefin_Sans/JosefinSans-Bold.ttf" download><img class="image" src="images/download.png"></a></p> </li>
-                <li class="list-group-item"><p class="second">Fonts from Friendly Fire Division <a href="fonts/Josefin_Sans/JosefinSans-BoldItalic.ttf" download><img class="image" src="images/download.png"></a></p></li>
-                <li class="list-group-item"> <p class="third">Fonts from Friendly Fire Division <a href="fonts/Josefin_Sans/JosefinSans-ExtraLight.ttf" download><img class="image" src="images/download.png"></a></p></li>
-                <li class="list-group-item"> <p class="four">Fonts from Friendly Fire Division <a href="fonts/Josefin_Sans/JosefinSans-ExtraLightItalic.ttf" download><img class="image" src="images/download.png"></a></p></li>
-                <li class="list-group-item"> <p class="five">Fonts from Friendly Fire Division <a href="fonts/Josefin_Sans/JosefinSans-Italic.ttf" download><img class="image" src="images/download.png"></a></p></li>
-                <li class="list-group-item"> <p class="six">Fonts from Friendly Fire Division <a href="fonts/Josefin_Sans/JosefinSans-Light.ttf" download><img class="image" src="images/download.png"></a></p></li>
-                <li class="list-group-item"> <p class="seven">Fonts from Friendly Fire Division <a href="fonts/Josefin_Sans/JosefinSans-LightItalic.ttf" download><img class="image" src="images/download.png"></a></p></li>
-            </section>
+
+<div id="preloader"></div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">ColorSpectrum</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active random" href="../randomColor/randomColor.html">Random Color</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="../generateGradient/genGradient.html">Create Gradient</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="../Fonts/index.html">Fonts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="#">Palette</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="../Contacts/contacts.html">Contracts</a>
+                </li>
+            </ul>
+        </div>
     </div>
+</nav>
+<div class="container">
+    <section id="Josefin">
+        <h1>Josefin</h1>
+    </section>
+    <section id="fonts">
+        <ul class="list-group">
+            <li class="list-group-item"><p class="first">Fonts from Friendly Fire Division <a
+                    href="fonts/Josefin_Sans/JosefinSans-Bold.ttf" download><img class="image"
+                                                                                 src="images/download.png"></a></p></li>
+            <li class="list-group-item"><p class="second">Fonts from Friendly Fire Division <a
+                    href="fonts/Josefin_Sans/JosefinSans-BoldItalic.ttf" download><img class="image"
+                                                                                       src="images/download.png"></a>
+            </p></li>
+            <li class="list-group-item"><p class="third">Fonts from Friendly Fire Division <a
+                    href="fonts/Josefin_Sans/JosefinSans-ExtraLight.ttf" download><img class="image"
+                                                                                       src="images/download.png"></a>
+            </p></li>
+            <li class="list-group-item"><p class="four">Fonts from Friendly Fire Division <a
+                    href="fonts/Josefin_Sans/JosefinSans-ExtraLightItalic.ttf" download><img class="image"
+                                                                                             src="images/download.png"></a>
+            </p></li>
+            <li class="list-group-item"><p class="five">Fonts from Friendly Fire Division <a
+                    href="fonts/Josefin_Sans/JosefinSans-Italic.ttf" download><img class="image"
+                                                                                   src="images/download.png"></a></p>
+            </li>
+            <li class="list-group-item"><p class="six">Fonts from Friendly Fire Division <a
+                    href="fonts/Josefin_Sans/JosefinSans-Light.ttf" download><img class="image"
+                                                                                  src="images/download.png"></a></p>
+            </li>
+            <li class="list-group-item"><p class="seven">Fonts from Friendly Fire Division <a
+                    href="fonts/Josefin_Sans/JosefinSans-LightItalic.ttf" download><img class="image"
+                                                                                        src="images/download.png"></a>
+            </p></li>
+    </section>
+</div>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var preloader = document.getElementById("preloader");
+
+        // Показываем preloader
+        preloader.style.display = "block";
+
+        // Задержка на 2 секунды
+        setTimeout(function () {
+            // Скрываем preloader
+            preloader.style.display = "none";
+        }, 1000);
+    });
+</script>
 </body>
 </html>
