--- a/generateGradient/genGradient.html
+++ b/generateGradient/genGradient.html
@@ -2,33 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Generate Gradient</title>
     <link rel="stylesheet" href="genGradient.css">
     <link rel="stylesheet" href="../index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <audio preload="auto" src="audio/Macroblank-空の約束.mp3" loop="true" autobuffer>
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../img/favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+
+    <link rel="stylesheet" href="../index.css">
+
+    <audio preload="auto" src="../audio/Macroblank-空の約束.mp3" loop="true" autobuffer>
     </audio>
 
     <script>
-        function setCookie(c_name,value,exdays)
-        {
-            var exdate=new Date();
+        function setCookie(c_name, value, exdays) {
+            var exdate = new Date();
             exdate.setDate(exdate.getDate() + exdays);
-            var c_value=escape(value) + ((exdays==null) ? "" : "; expires="+exdate.toUTCString());
-            document.cookie=c_name + "=" + c_value;
+            var c_value = escape(value) + ((exdays == null) ? "" : "; expires=" + exdate.toUTCString());
+            document.cookie = c_name + "=" + c_value;
         }
 
-        function getCookie(c_name)
-        {
-            var i,x,y,ARRcookies=document.cookie.split(";");
-            for (i=0;i<ARRcookies.length;i++)
-            {
-                x=ARRcookies[i].substr(0,ARRcookies[i].indexOf("="));
-                y=ARRcookies[i].substr(ARRcookies[i].indexOf("=")+1);
-                x=x.replace(/^\s+|\s+$/g,"");
-                if (x==c_name)
-                {
+        function getCookie(c_name) {
+            var i, x, y, ARRcookies = document.cookie.split(";");
+            for (i = 0; i < ARRcookies.length; i++) {
+                x = ARRcookies[i].substr(0, ARRcookies[i].indexOf("="));
+                y = ARRcookies[i].substr(ARRcookies[i].indexOf("=") + 1);
+                x = x.replace(/^\s+|\s+$/g, "");
+                if (x == c_name) {
                     return unescape(y);
                 }
             }
@@ -37,25 +43,23 @@
         var song = document.getElementsByTagName('audio')[0];
         var played = false;
         var tillPlayed = getCookie('timePlayed');
-        function update()
-        {
-            if(!played){
-                if(tillPlayed){
+
+        function update() {
+            if (!played) {
+                if (tillPlayed) {
                     song.currentTime = tillPlayed;
                     song.play();
                     played = true;
-                }
-                else {
+                } else {
                     song.play();
                     played = true;
                 }
-            }
-
-            else {
+            } else {
                 setCookie('timePlayed', song.currentTime);
             }
         }
-        setInterval(update,1000);
+
+        setInterval(update, 1000);
     </script>
 </head>
 <body>
@@ -77,7 +81,13 @@
                     <a class="nav-link active random" href="../randomColor/randomColor.html">Random Color</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active gradient" href="genGradient.html">Create Gradient</a>
+                    <a class="nav-link active gradient" href="../generateGradient/genGradient.html">Create Gradient</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="../Fonts/index.html">Fonts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="#">Palette</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active gradient" href="../Contacts/contacts.html">Contracts</a>
