--- a/index.html
+++ b/index.html
@@ -27,24 +27,20 @@
     </audio>
 
     <script>
-        function setCookie(c_name,value,exdays)
-        {
-            var exdate=new Date();
+        function setCookie(c_name, value, exdays) {
+            var exdate = new Date();
             exdate.setDate(exdate.getDate() + exdays);
-            var c_value=escape(value) + ((exdays==null) ? "" : "; expires="+exdate.toUTCString());
-            document.cookie=c_name + "=" + c_value;
+            var c_value = escape(value) + ((exdays == null) ? "" : "; expires=" + exdate.toUTCString());
+            document.cookie = c_name + "=" + c_value;
         }
 
-        function getCookie(c_name)
-        {
-            var i,x,y,ARRcookies=document.cookie.split(";");
-            for (i=0;i<ARRcookies.length;i++)
-            {
-                x=ARRcookies[i].substr(0,ARRcookies[i].indexOf("="));
-                y=ARRcookies[i].substr(ARRcookies[i].indexOf("=")+1);
-                x=x.replace(/^\s+|\s+$/g,"");
-                if (x==c_name)
-                {
+        function getCookie(c_name) {
+            var i, x, y, ARRcookies = document.cookie.split(";");
+            for (i = 0; i < ARRcookies.length; i++) {
+                x = ARRcookies[i].substr(0, ARRcookies[i].indexOf("="));
+                y = ARRcookies[i].substr(ARRcookies[i].indexOf("=") + 1);
+                x = x.replace(/^\s+|\s+$/g, "");
+                if (x == c_name) {
                     return unescape(y);
                 }
             }
@@ -53,28 +49,24 @@
         var song = document.getElementsByTagName('audio')[0];
         var played = false;
         var tillPlayed = getCookie('timePlayed');
-        function update()
-        {
-            if(!played){
-                if(tillPlayed){
+
+        function update() {
+            if (!played) {
+                if (tillPlayed) {
                     song.currentTime = tillPlayed;
                     song.play();
                     played = true;
-                }
-                else {
+                } else {
                     song.play();
                     played = true;
                 }
-            }
-
-            else {
+            } else {
                 setCookie('timePlayed', song.currentTime);
             }
         }
-        setInterval(update,1000);
+
+        setInterval(update, 1000);
     </script>
-
-
 
 
 </head>
@@ -116,6 +108,12 @@
                 <button class="btn-main btn-picker">
                     Contacts
                 </button>
+            </a>
+        </div>
+
+        <div class="col-12 mb-3">
+            <a id="fontLink" class="" href="Fonts/index.html">
+                <button class="btn-main btn-font">Chose Fonts</button>
             </a>
         </div>
     </div>
