--- a/randomColor/randomColor.html
+++ b/randomColor/randomColor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>RandomColor</title>
     <link rel="stylesheet" href="randColor.css">
     <link rel="stylesheet" href="../index.css"></link>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,24 +17,20 @@
     </audio>
 
     <script>
-        function setCookie(c_name,value,exdays)
-        {
-            var exdate=new Date();
+        function setCookie(c_name, value, exdays) {
+            var exdate = new Date();
             exdate.setDate(exdate.getDate() + exdays);
-            var c_value=escape(value) + ((exdays==null) ? "" : "; expires="+exdate.toUTCString());
-            document.cookie=c_name + "=" + c_value;
+            var c_value = escape(value) + ((exdays == null) ? "" : "; expires=" + exdate.toUTCString());
+            document.cookie = c_name + "=" + c_value;
         }
 
-        function getCookie(c_name)
-        {
-            var i,x,y,ARRcookies=document.cookie.split(";");
-            for (i=0;i<ARRcookies.length;i++)
-            {
-                x=ARRcookies[i].substr(0,ARRcookies[i].indexOf("="));
-                y=ARRcookies[i].substr(ARRcookies[i].indexOf("=")+1);
-                x=x.replace(/^\s+|\s+$/g,"");
-                if (x==c_name)
-                {
+        function getCookie(c_name) {
+            var i, x, y, ARRcookies = document.cookie.split(";");
+            for (i = 0; i < ARRcookies.length; i++) {
+                x = ARRcookies[i].substr(0, ARRcookies[i].indexOf("="));
+                y = ARRcookies[i].substr(ARRcookies[i].indexOf("=") + 1);
+                x = x.replace(/^\s+|\s+$/g, "");
+                if (x == c_name) {
                     return unescape(y);
                 }
             }
@@ -43,25 +39,23 @@
         var song = document.getElementsByTagName('audio')[0];
         var played = false;
         var tillPlayed = getCookie('timePlayed');
-        function update()
-        {
-            if(!played){
-                if(tillPlayed){
+
+        function update() {
+            if (!played) {
+                if (tillPlayed) {
                     song.currentTime = tillPlayed;
                     song.play();
                     played = true;
-                }
-                else {
+                } else {
                     song.play();
                     played = true;
                 }
-            }
-
-            else {
+            } else {
                 setCookie('timePlayed', song.currentTime);
             }
         }
-        setInterval(update,1000);
+
+        setInterval(update, 1000);
     </script>
 
 </head>
@@ -85,6 +79,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active gradient" href="../generateGradient/genGradient.html">Create Gradient</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="../Fonts/index.html">Fonts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="#">Palette</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active gradient" href="../Contacts/contacts.html">Contracts</a>
