--- a/randomColor/randomColor.html
+++ b/randomColor/randomColor.html
@@ -120,6 +120,8 @@
         <button id="changeBtn" class="btn-main btn-change">Click</button>
     </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 <script src="randColor.js" language="JavaScript"></script>
 
 </body>
