--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
                 <button class="btn-main btn-font">Chose Fonts</button>
             </a>
         </div>
+
+        <div class="col-12 mb-3">
+            <a id="PaletteLink" class="" href="Palette/index.html">
+                <button class="btn-main btn-palette">Chose Palette</button>
+            </a>
+        </div>
     </div>
 </div>
 
