--- a/Fonts/index.html
+++ b/Fonts/index.html
@@ -46,7 +46,7 @@
                     <a class="nav-link active gradient" href="../Fonts/index.html">Fonts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active gradient" href="#">Palette</a>
+                    <a class="nav-link active gradient" href="../Palette/index.html">Palette</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active gradient" href="../Contacts/contacts.html">Contracts</a>
