--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
                 <button class="btn-main btn-palette">Chose Palette</button>
             </a>
         </div>
+
+        <div class="col-12 mb-3">
+            <a id="tableLink" class="" href="Palette/index.html">
+                <button class="btn-main btn-random">Secret Table</button>
+            </a>
+        </div>
     </div>
 </div>
 
