--- a/Palette/index.html
+++ b/Palette/index.html
@@ -47,6 +47,9 @@
                 <li class="nav-item">
                     <a class="nav-link active gradient" href="../Contacts/contacts.html">Contracts</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active gradient" href="../table.html">Table</a>
+                </li>
             </ul>
         </div>
     </div>
